--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/gym_sys_db?createDatabaseIfNotExist=true
-    username: root
-    password: Dinesh@12345
+    username:
+    password:
   jpa:
     hibernate:
       ddl-auto: update
